# k8s-dashboard

./: notes.txt  readme.md
backend/: package.json
backend-node/: .eslintignore  .eslintrc.json  Containerfile  package.json  rawTest.js
backend-node/k8s/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml
backend-node/src/: main.ts
backend-rust/: .dockerignore  Cargo.toml  Containerfile  Rocket.toml
backend-rust/k8s/: deployment.yaml  deployment.yml  readme.txt
backend-rust/src/: lib.rs  main.rs  types.rs  util.rs
backend/src/: main.ts  types.ts
frontend/: index.html  package.json
frontend-next/: Containerfile  package.json
frontend-next/cluster_api/: ClusterApi.ts  IClusterApi.ts
frontend-next/components/: ContainerNamespacedPodsComponent.tsx  ContainerNodesComponent.tsx  NamespacesComponent.tsx  NodeDetailsComponent.tsx  NodesComponent.tsx  ObjectComponent.tsx  PodDetailsComponent.tsx  PodsComponent.tsx  SeparatorComponent.tsx
frontend-next/k8s/: deployment.yaml
frontend-next/pages/: _app.tsx  index.tsx
frontend-next/pages/api/: nodes.ts  pods.ts
frontend-next/styles/: app.scss
frontend-next/util/: types.ts
frontend-vite/: .eslintrc.json  package.json
frontend-vite/src/: App.scss  App.tsx  NamespacesComponent.tsx  types.ts
frontend/src/: App.css  App.scss  App.tsx  Namespaces.tsx  NodeDetailsComponent.tsx  ObjectComponent.tsx  PodDetailsComponent.tsx  PodsComponent.tsx
